<resources>
    <string name="app_name">ShopHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="let_s_login_text">Let\'s Login</string>
    <string name="don_t_have_an_account_register_text">Don\'t have an account?</string>
    <string name="facebook_text">Facebook</string>
    <string name="let_s_register_text">Let\'s Register</string>
    <string name="do_you_have_an_account_login">Do you have an account?</string>
    <string name="email_text">Email</string>
    <string name="cancel_text">Cancel</string>
    <string name="send_text">Send</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_password_message_text">we will send you the password reset link to your email</string>
    <string name="add_to_cart_text">Add to cart</string>
    <string name="Orders">Orders</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="address">Address\n</string>
    <string name="profile">My Profile</string>
    <string name="payment">Payment methods</string>
    <string name="favorite">My Favorite</string>
    <string name="personalInfo">Personl Information</string>
    <string name="tv_settings">Settings</string>
    <string name="editImageBtn">editImageBtn</string>
    <string name="alreadyHaveNumOrders">Already have number orders\n</string>
    <string name="you_have_num_favorite_item">You Have num favorite item</string>
    <string name="VisaPayment">Visa**344</string>
    <string name="numAddress">3 Addresses</string>
    <string name="tv_notification_password">Notification,Password</string>
    <string name="tv_logout">Logout</string>
    <string name="tv_logoutFromAccount">Logout From Account</string>
    <string name="order_at_shopHub">Order at ShopHub :</string>

</resources>