<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_text"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_thin"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvResetPasswordMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_message_text"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvResetPassword"
            app:layout_constraintTop_toBottomOf="@id/tvResetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/etResetEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvResetPasswordMessage"
            app:layout_constraintStart_toStartOf="@id/tvResetPasswordMessage"
            app:layout_constraintEnd_toEndOf="@id/tvResetPasswordMessage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etResetEmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/etResetEmail"
            app:layout_constraintEnd_toEndOf="@id/etResetEmail"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/cancel_text"
                android:background="@drawable/white_background"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/send_text"
                android:background="@drawable/blue_background"
                android:textColor="@color/white"
                android:textAllCaps="false" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>