<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.loginRegister.AccountOptionsFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blury_background"
            android:scaleType="centerCrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h3"
                android:drawableStart="@drawable/shopping_hub"
                android:drawablePadding="6dp"
                android:textStyle="bold"
                android:layout_marginTop="65dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/tvRightAddressForShopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h4"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@id/textAppName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/rightAddress"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tvQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h2"
                app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
                app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
                app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/quality"
                android:layout_marginTop="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerAccountOptionsBtn"
                android:layout_width="@dimen/mediumButtonWidth"
                android:layout_height="@dimen/mediumButtonHeight"
                style="@style/blueButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/tvQuality"
                app:layout_constraintStart_toStartOf="@id/tvQuality"
                app:layout_constraintEnd_toEndOf="@id/tvQuality"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="Register" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginAccountOptionsBtn"
                android:layout_width="@dimen/mediumButtonWidth"
                android:layout_height="@dimen/mediumButtonHeight"
                style="@style/whiteButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/registerAccountOptionsBtn"
                app:layout_constraintStart_toStartOf="@id/tvQuality"
                app:layout_constraintEnd_toEndOf="@id/tvQuality"
                android:text="Login"
                android:layout_marginTop="6dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>