<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.loginRegister.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:drawableStart="@drawable/shopping_hub"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/textAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            android:text="@string/let_s_login_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/tvDoNotHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintTop_toBottomOf="@id/tvLogin"
            app:layout_constraintStart_toStartOf="@id/tvLogin"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register_text"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            style="@style/editText"
            app:layout_constraintTop_toBottomOf="@id/tvDoNotHaveAccount"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            style="@style/editText"
            app:layout_constraintTop_toBottomOf="@id/etEmailLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLogin"
            app:layout_constraintStart_toStartOf="@id/tvLogin"
            android:textAlignment="center"
            android:gravity="center"
            android:text="Forgot Password"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginAccountBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:text="Login"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook_login"
            app:layout_constraintTop_toBottomOf="@id/LoginAccountBtn"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_text"
            app:layout_constraintTop_toTopOf="@id/facebookLogin"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"/>

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_login"
            app:layout_constraintTop_toBottomOf="@id/LoginAccountBtn"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google"
            app:layout_constraintTop_toTopOf="@id/googleLogin"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLogin"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>