<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.loginRegister.RegisterFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blury_background"
            android:scaleType="centerCrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h3"
                android:drawableStart="@drawable/shopping_hub"
                android:drawablePadding="6dp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h4"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/textAppName"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                android:text="@string/let_s_register_text"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tvDoHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h2"
                app:layout_constraintTop_toBottomOf="@id/tvLogin"
                app:layout_constraintStart_toStartOf="@id/tvLogin"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/do_you_have_an_account_login"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/loginOption_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="login"
                app:layout_constraintTop_toTopOf="@id/tvDoHaveAccount"
                app:layout_constraintStart_toEndOf="@id/tvDoHaveAccount"
                style="@style/h2"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:textColor="@color/g_blue"/>

            <EditText
                android:id="@+id/etFirstNameRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                style="@style/editText"
                app:layout_constraintTop_toBottomOf="@id/tvDoHaveAccount"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                android:hint="First Name"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp" />

            <EditText
                android:id="@+id/etLastNameRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                style="@style/editText"
                app:layout_constraintTop_toBottomOf="@id/etFirstNameRegister"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                android:hint="Last Name"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                style="@style/editText"
                app:layout_constraintTop_toBottomOf="@id/etLastNameRegister"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                style="@style/editText"
                app:layout_constraintTop_toBottomOf="@id/etEmailRegister"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_marginTop="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerAccountBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/smallButtonHeight"
                style="@style/blueButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/etPasswordRegister"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                android:text="Register"
                android:layout_marginTop="8dp" />

            <ImageView
                android:id="@+id/facebookRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_login"
                app:layout_constraintTop_toBottomOf="@id/registerAccountBtn"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_text"
                app:layout_constraintTop_toTopOf="@id/facebookRegister"
                app:layout_constraintStart_toStartOf="@id/facebookRegister"
                app:layout_constraintEnd_toEndOf="@id/facebookRegister"
                app:layout_constraintBottom_toBottomOf="@id/facebookRegister"/>

            <ImageView
                android:id="@+id/googleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_login"
                app:layout_constraintTop_toBottomOf="@id/registerAccountBtn"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Google"
                app:layout_constraintTop_toTopOf="@id/googleRegister"
                app:layout_constraintStart_toStartOf="@id/googleRegister"
                app:layout_constraintEnd_toEndOf="@id/googleRegister"
                app:layout_constraintBottom_toBottomOf="@id/googleRegister"/>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLoginLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLoginRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>